--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "npm run type-check && tsx src/index.ts",
+    "dev:watch": "tsx watch src/index.ts",
     "build": "npm run clean:dist && tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "clean:dist": "rimraf dist",
