--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "noEmit": false,
     "outDir": "dist",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "removeComments": true,
-    "emitDeclarationOnly": false
+    "removeComments": true
   },
   "exclude": ["node_modules", "dist"]
 }
