init work on websockets

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "alchemy-sdk": "^3.5.6",
+    "dotenv": "^16.4.7",
+    "viem": "^2.25.0"
   }
 }
