--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "npm run type-check && tsx src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
     "build": "npm run clean:dist && tsc -p tsconfig.build.json",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "clean:dist": "rimraf dist",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
