--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "lib": ["esnext", "dom", "dom.iterable"],
-    "module": "ESNext",
+    "module": "CommonJS",
     "skipLibCheck": true,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "allowImportingTsExtensions": false,
