feat: add univ3 route fetching using smart-order-router (AlphaRouter)

--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@uniswap/sdk-core": "^7.7.2",
+    "@uniswap/smart-order-router": "^4.20.10",
     "dotenv": "^16.4.7",
+    "ethers": "^5.8.0",
     "viem": "^2.25.0",
     "ws": "^8.18.1"
   }
