--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 BASE_RPC_URL=""
-BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
+BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=""
+
+# Addresses
+LEVERAGE_MANAGER=""
+REBALANCER=""
