--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     // * Linting * //
     "strict": true,
     "noUnusedLocals": true,
@@ -20,7 +20,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "outDir": "./dist",
+    "rootDir": "."
   },
-  "include": ["src/**/*", "types/**/*.d.ts", "*.ts", "abis/**/*.ts"]
+  "include": ["src/**/*"]
 }
