--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src/**/*", "types/**/*.d.ts", "*.ts", "abis/**/*.ts"]
 }
