fix: PR comments

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=""
 LEVERAGE_MANAGER=""
 REBALANCER=""
 UNISWAP_V2_ROUTER_02=""
+
+# Dutch Auction
+DUTCH_AUCTION_STEP_COUNT=""
+DUTCH_AUCTION_POLLING_INTERVAL=""
