ci: Add Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-BASE_PRIMARY_RPC_URL=""
-BASE_FALLBACK_RPC_URL=""
-BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=""
+BASE_PRIMARY_RPC_URL=
+BASE_FALLBACK_RPC_URL=
+BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
 # Addresses
-LEVERAGE_MANAGER=""
-REBALANCER=""
-UNISWAP_V2_ROUTER_02=""
+LEVERAGE_MANAGER=
+REBALANCER=
+UNISWAP_V2_ROUTER_02=
