--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-BASE_PRIMARY_RPC_URL=""
-BASE_FALLBACK_RPC_URL=""
-BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=""
+BASE_PRIMARY_RPC_URL=
+BASE_FALLBACK_RPC_URL=
+BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
 # Addresses
-LEVERAGE_MANAGER=""
-REBALANCER=""
-UNISWAP_V2_ROUTER_02=""
+LEVERAGE_MANAGER=
+REBALANCER=
+UNISWAP_V2_ROUTER_02=
 
 # Dutch Auction
-DUTCH_AUCTION_STEP_COUNT=""
-DUTCH_AUCTION_POLLING_INTERVAL=""
+DUTCH_AUCTION_STEP_COUNT=
+DUTCH_AUCTION_POLLING_INTERVAL=
