feat: setup slack alerts

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ UNISWAP_V2_ROUTER_02=
 # Dutch Auction
 DUTCH_AUCTION_STEP_COUNT=
 DUTCH_AUCTION_POLLING_INTERVAL=
+
+# Slack alerts
+SLACK_ALERT_CHANNEL_ID=
+SLACK_AUTH_TOKEN=
