--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@slack/web-api": "^7.9.1",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/smart-order-router": "^4.20.10",
     "dotenv": "^16.4.7",
