feat: lifi api key

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ UNISWAP_V2_ROUTER_02=
 # Dutch Auction
 DUTCH_AUCTION_STEP_COUNT=
 DUTCH_AUCTION_POLLING_INTERVAL=
+
+# Third party api keys
+LIFI_API_KEY=
