add logAndAlert util

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "ignorePatterns": ["dist/**/*"],
+  "ignorePatterns": ["dist/**/*", "contracts/**/*"],
   "root": true,
   "env": {
     "node": true,
