integrate etherfi native staking quotes in core auction taking logic

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@ BASE_FALLBACK_RPC_URL=
 BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
 # Addresses
+ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
 REBALANCER=
 UNISWAP_V2_ROUTER_02=
+WETH=
+WEETH=
 
 # Dutch Auction
 DUTCH_AUCTION_STEP_COUNT=
