feat: setup slack alerts (#45)

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,9 @@ UNISWAP_V2_ROUTER_02=
 DUTCH_AUCTION_STEP_COUNT=
 DUTCH_AUCTION_POLLING_INTERVAL=
 
+# Slack alerts
+SLACK_ALERT_CHANNEL_ID=
+SLACK_AUTH_TOKEN=
+
 # Third party api keys
 LIFI_API_KEY=
