--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "npm run type-check && tsx src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
-    "build": "npm run clean:dist && tsc -p tsconfig.build.json",
+    "build": "npm run clean:dist && tsc -p tsconfig.build.json && npm run copy:leverage-tokens",
     "start": "node dist/src/index.js",
     "clean:dist": "rimraf dist",
     "lint": "eslint . --ext .ts",
@@ -16,7 +16,8 @@
     "format:fix": "prettier --write .",
     "type-check": "tsc --noEmit",
     "backfill:leverage-tokens": "tsx src/backfill/backfillLeverageTokenCreated.ts",
-    "backfill:leverage-token": "tsx src/backfill/addLeverageTokenToList.ts"
+    "backfill:leverage-token": "tsx src/backfill/addLeverageTokenToList.ts",
+    "copy:leverage-tokens": "mkdir -p dist/src/data && [ -f src/data/leverageTokens.json ] && cp src/data/leverageTokens.json dist/src/data/ || true"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -36,6 +37,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@slack/web-api": "^7.9.1",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/smart-order-router": "^4.20.10",
     "dotenv": "^16.4.7",
