--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,13 @@ BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 # Addresses
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
-REBALANCER=
+DUTCH_AUCTION_REBALANCER=
+PRE_LIQUIDATION_AUCTION_REBALANCER=
 UNISWAP_V2_ROUTER_02=
 WETH=
 WEETH=
 
-# Dutch Auction
+# Rebalancer contracts configs
 DUTCH_AUCTION_STEP_COUNT=
 REBALANCE_POLLING_INTERVAL=
 
