feat: pre liquidation rebalance feature (#55)

--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,17 @@ BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 # Addresses
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
-REBALANCER=
+DUTCH_AUCTION_REBALANCER=
+PRE_LIQUIDATION_REBALANCER=
 UNISWAP_V2_ROUTER_02=
 WETH=
 WEETH=
 
-# Dutch Auction
+# Rebalancer contracts configs
 DUTCH_AUCTION_STEP_COUNT=
 DUTCH_AUCTION_POLLING_INTERVAL=
+PRE_LIQUIDATION_STEP_COUNT=
+PRE_LIQUIDATION_POLLING_INTERVAL=
 
 # Slack alerts
 SLACK_ALERT_CHANNEL_ID=
