chore: fixes from call

--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -5,3 +5,11 @@ OWNER=
 LEVERAGE_MANAGER=
 SWAP_ADAPTER=
 MORPHO=
+WETH=
+
+TENDERLY_RPC_URL=
+TENDERLY_VERIFIER_URL=${TENDERLY_RPC_URL}/verify/etherscan
+TENDERLY_VERIFIER_KEY=
+
+BASE_VERIFIER_URL=
+BASE_VERIFIER_KEY=
