--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,4 +5,8 @@ out = "out"
 libs = ["lib"]
 via_ir = true
 
+[rpc_endpoints]
+tenderly = "${TENDERLY_RPC_URL}"
+base = "${BASE_RPC_URL}"
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
