--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ LEVERAGE_MANAGER=
 DUTCH_AUCTION_REBALANCER=
 PRE_LIQUIDATION_REBALANCER=
 UNISWAP_V2_ROUTER_02=
+UNISWAP_SWAP_ROUTER_02=
 WETH=
 WEETH=
 
@@ -25,3 +26,6 @@ SLACK_AUTH_TOKEN=
 
 # Third party api keys
 LIFI_API_KEY=
+
+# Comma separated list of leverage tokens to add to backfill
+BACKFILL_LEVERAGE_TOKENS=
