--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+PRIVATE_KEY=
+BASE_PRIMARY_RPC_URL_WS=
 BASE_PRIMARY_RPC_URL=
 BASE_FALLBACK_RPC_URL=
 BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
@@ -8,6 +10,7 @@ LEVERAGE_MANAGER=
 DUTCH_AUCTION_REBALANCER=
 PRE_LIQUIDATION_REBALANCER=
 UNISWAP_V2_ROUTER_02=
+UNISWAP_SWAP_ROUTER_02=
 WETH=
 WEETH=
 
@@ -23,3 +26,6 @@ SLACK_AUTH_TOKEN=
 
 # Third party api keys
 LIFI_API_KEY=
+
+# Comma separated list of leverage tokens to add to backfill
+BACKFILL_LEVERAGE_TOKENS=
