env var for using fork

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ BASE_PRIMARY_RPC_URL=
 BASE_FALLBACK_RPC_URL=
 BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
+# If running the bot on a fork (e.g. Tenderly vnet), set this to true
+IS_USING_FORK=
+
 # Addresses
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
