--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "contracts/lib/openzeppelin-contracts"]
 	path = contracts/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "contracts/lib/contracts"]
+	path = contracts/lib/contracts
+	url = https://github.com/cowprotocol/contracts
+[submodule "contracts/lib/composable-cow"]
+	path = contracts/lib/composable-cow
+	url = https://github.com/cowprotocol/composable-cow
