--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -3,6 +3,8 @@ solc = "0.8.26"
 src = "src"
 out = "out"
 libs = ["lib"]
+optimizer = true
+optimizer_runs = 50000
 via_ir = true
 
 [rpc_endpoints]
