update bot logic to use encoded calldata

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,10 @@ IS_USING_FORK=
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
 DUTCH_AUCTION_REBALANCER=
+MULTICALL_EXECUTOR=
 PRE_LIQUIDATION_REBALANCER=
-UNISWAP_V2_ROUTER_02=
 UNISWAP_SWAP_ROUTER_02=
+UNISWAP_V2_ROUTER_02=
 WETH=
 WEETH=
 
