lifi and mainnet support fixes

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PRIVATE_KEY=
-BASE_PRIMARY_RPC_URL_WS=
-BASE_PRIMARY_RPC_URL=
-BASE_FALLBACK_RPC_URL=
-BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
+PRIMARY_RPC_URL_WS=
+PRIMARY_RPC_URL=
+FALLBACK_RPC_URL=
+REBALANCE_ELIGIBILITY_POLL_INTERVAL=
+CHAIN_ID=
 
 # If running the bot on a fork (e.g. Tenderly vnet), set this to true
 IS_USING_FORK=
@@ -27,6 +28,9 @@ PRE_LIQUIDATION_POLLING_INTERVAL=
 # Slack alerts
 SLACK_ALERT_CHANNEL_ID=
 SLACK_AUTH_TOKEN=
+
+# Slippage parameter to LiFI API
+LIFI_SLIPPAGE=
 
 # Third party api keys
 LIFI_API_KEY=
