add logic for L1 etherfi staking

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,12 @@ CHAIN_ID=
 IS_USING_FORK=
 
 # Addresses
+DUTCH_AUCTION_REBALANCER=
+EETH=
+ETHERFI_DEPOSIT_ADAPTER=
+ETHERFI_LIQUIDITY_POOL=
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
-DUTCH_AUCTION_REBALANCER=
 MULTICALL_EXECUTOR=
 PRE_LIQUIDATION_REBALANCER=
 UNISWAP_SWAP_ROUTER_02=
