--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,27 @@
-PRIVATE_KEY=
-PRIMARY_RPC_URL_WS=
-PRIMARY_RPC_URL=
-FALLBACK_RPC_URL=
-REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 CHAIN_ID=
+PRIVATE_KEY=
+PRIMARY_RPC_URL=
+PRIMARY_RPC_URL_WS=
+FALLBACK_RPC_URL=
+
+# Comma separated list of leverage tokens to add to backfill
+BACKFILL_LEVERAGE_TOKENS=
 
 # If running the bot on a fork (e.g. Tenderly vnet), set this to true
 IS_USING_FORK=
 
-# Addresses
+# ===================
+# ==== Addresses ====
+# ===================
+
 DUTCH_AUCTION_REBALANCER=
+# Only required on L1s for WEETH-WETH LTs
 EETH=
+# Only required on L1s for WEETH-WETH LTs
 ETHERFI_DEPOSIT_ADAPTER=
+# Only required on L1s for WEETH-WETH LTs
 ETHERFI_LIQUIDITY_POOL=
+# Only required on L2s for WEETH-WETH LTs
 ETHERFI_L2_MODE_SYNC_POOL=
 LEVERAGE_MANAGER=
 MULTICALL_EXECUTOR=
@@ -22,21 +31,32 @@ UNISWAP_V2_ROUTER_02=
 WETH=
 WEETH=
 
-# Rebalancer contracts configs
-DUTCH_AUCTION_STEP_COUNT=
-DUTCH_AUCTION_POLLING_INTERVAL=
-PRE_LIQUIDATION_STEP_COUNT=
-PRE_LIQUIDATION_POLLING_INTERVAL=
+# ====================
+# ==== Rebalancer ====
+# ====================
 
-# Slack alerts
+
+# Polling interval for attempting to participate in a Dutch Auction rebalance
+DUTCH_AUCTION_POLLING_INTERVAL=
+# Polling interval for attempting to participate in a Preliquidation rebalance
+PRE_LIQUIDATION_POLLING_INTERVAL=
+REBALANCE_ELIGIBILITY_POLL_INTERVAL=
+
+DUTCH_AUCTION_STEP_COUNT=
+PRE_LIQUIDATION_STEP_COUNT=
+
+# ===============
+# ==== Slack ====
+# ===============
+
 SLACK_ALERT_CHANNEL_ID=
 SLACK_AUTH_TOKEN=
 
-# Slippage parameter to LiFI API
-LIFI_SLIPPAGE=
+# ==============
+# ==== LiFi ====
+# ==============
 
-# Third party api keys
 LIFI_API_KEY=
 
-# Comma separated list of leverage tokens to add to backfill
-BACKFILL_LEVERAGE_TOKENS=
+# Slippage parameter used for LiFi API quote
+LIFI_SLIPPAGE=
