feat: estimate and consider gas cost for profitability of rebalance

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,9 @@ LIFI_API_KEY=
 
 # Slippage parameter used for LiFi API quote
 LIFI_SLIPPAGE=
+
+# ===================
+# ==== CoinGecko ====
+# ===================
+
+COINGECKO_API_KEY=
