--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ PRIVATE_KEY=
 PRIMARY_RPC_URL=
 PRIMARY_RPC_URL_WS=
 FALLBACK_RPC_URL=
+ETHEREUM_MAINNET_RPC_URL=
+ETHEREUM_MAINNET_FALLBACK_RPC_URL=
 
 # Comma separated list of leverage tokens to add to backfill
 BACKFILL_LEVERAGE_TOKENS=
@@ -60,9 +62,3 @@ LIFI_API_KEY=
 
 # Slippage parameter used for LiFi API quote
 LIFI_SLIPPAGE=
-
-# ===================
-# ==== CoinGecko ====
-# ===================
-
-COINGECKO_API_KEY=
