feat: use arbitrary calldata for swap (#76)

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,41 @@
+CHAIN_ID=
 PRIVATE_KEY=
-BASE_PRIMARY_RPC_URL_WS=
-BASE_PRIMARY_RPC_URL=
-BASE_FALLBACK_RPC_URL=
-BASE_REBALANCE_ELIGIBILITY_POLL_INTERVAL=
+PRIMARY_RPC_URL=
+PRIMARY_RPC_URL_WS=
+FALLBACK_RPC_URL=
+
+# Comma separated list of leverage tokens to add to backfill
+BACKFILL_LEVERAGE_TOKENS=
 
 # If running the bot on a fork (e.g. Tenderly vnet), set this to true
 IS_USING_FORK=
 
-# Addresses
-ETHERFI_L2_MODE_SYNC_POOL=
-LEVERAGE_MANAGER=
-DUTCH_AUCTION_REBALANCER=
-PRE_LIQUIDATION_REBALANCER=
-UNISWAP_V2_ROUTER_02=
-UNISWAP_SWAP_ROUTER_02=
-WETH=
-WEETH=
+# ====================
+# ==== Rebalancer ====
+# ====================
 
-# Rebalancer contracts configs
-DUTCH_AUCTION_STEP_COUNT=
+
+# Polling interval for attempting to participate in a Dutch Auction rebalance
 DUTCH_AUCTION_POLLING_INTERVAL=
-PRE_LIQUIDATION_STEP_COUNT=
+# Polling interval for attempting to participate in a Preliquidation rebalance
 PRE_LIQUIDATION_POLLING_INTERVAL=
+REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
-# Slack alerts
+DUTCH_AUCTION_STEP_COUNT=
+PRE_LIQUIDATION_STEP_COUNT=
+
+# ===============
+# ==== Slack ====
+# ===============
+
 SLACK_ALERT_CHANNEL_ID=
 SLACK_AUTH_TOKEN=
 
-# Third party api keys
+# ==============
+# ==== LiFi ====
+# ==============
+
 LIFI_API_KEY=
 
-# Comma separated list of leverage tokens to add to backfill
-BACKFILL_LEVERAGE_TOKENS=
+# Slippage parameter used for LiFi API quote
+LIFI_SLIPPAGE=
