update env example

--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,12 @@ BACKFILL_LEVERAGE_TOKENS=
 # If running the bot on a fork (e.g. Tenderly vnet), set this to true
 IS_USING_FORK=
 
+# True if profitability of a rebalance should consider the gas fee of the rebalance transaction
+CHECK_PROFITABILITY_WITH_GAS_FEE=
+
 # ====================
 # ==== Rebalancer ====
 # ====================
-
 
 # Polling interval for attempting to participate in a Dutch Auction rebalance
 DUTCH_AUCTION_POLLING_INTERVAL=
