--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ PRIVATE_KEY=
 PRIMARY_RPC_URL=
 PRIMARY_RPC_URL_WS=
 FALLBACK_RPC_URL=
+ETHEREUM_MAINNET_RPC_URL=
+ETHEREUM_MAINNET_FALLBACK_RPC_URL=
 
 # Comma separated list of leverage tokens to add to backfill
 BACKFILL_LEVERAGE_TOKENS=
@@ -10,10 +12,12 @@ BACKFILL_LEVERAGE_TOKENS=
 # If running the bot on a fork (e.g. Tenderly vnet), set this to true
 IS_USING_FORK=
 
+# True if profitability of a rebalance should consider the gas fee of the rebalance transaction
+CHECK_PROFITABILITY_WITH_GAS_FEE=
+
 # ====================
 # ==== Rebalancer ====
 # ====================
-
 
 # Polling interval for attempting to participate in a Dutch Auction rebalance
 DUTCH_AUCTION_POLLING_INTERVAL=
