feat: support deploy scripts for multiple chains

--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -1,13 +1,14 @@
-PRIVATE_KEY=
-
-# Rebalancer contract params
-OWNER=
-LEVERAGE_MANAGER=
-MORPHO=
+DEPLOYER_ACCOUNT_NAME=
+DEPLOYER_ACCOUNT_ADDRESS=
 
 TENDERLY_RPC_URL=
 TENDERLY_VERIFIER_URL=${TENDERLY_RPC_URL}/verify/etherscan
 TENDERLY_VERIFIER_KEY=
 
+BASE_RPC_URL=
 BASE_VERIFIER_URL=
 BASE_VERIFIER_KEY=
+
+ETH_RPC_URL=
+ETH_VERIFIER_URL=
+ETH_VERIFIER_KEY=
