--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -1,5 +1,6 @@
 [profile.default]
-solc = "0.8.26"
+solc = "0.8.30"
+evm_version = "prague"
 src = "src"
 out = "out"
 libs = ["lib"]
@@ -10,5 +11,6 @@ via_ir = true
 [rpc_endpoints]
 tenderly = "${TENDERLY_RPC_URL}"
 base = "${BASE_RPC_URL}"
+eth = "${ETH_RPC_URL}"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
