fix: use env vars for rebalancer contract addresses

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ CHECK_PROFITABILITY_WITH_GAS_FEE=
 # ==== Rebalancer ====
 # ====================
 
+DUTCH_AUCTION_REBALANCER_ADDRESS=
+PRE_LIQUIDATION_REBALANCER_ADDRESS=
+
 # Polling interval for attempting to participate in a Dutch Auction rebalance
 DUTCH_AUCTION_POLLING_INTERVAL=
 # Polling interval for attempting to participate in a Preliquidation rebalance
