--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
 
+# ms to wait before submitting another takeAuction tx for an LT if one is still pending
+TAKE_AUCTION_LOCK_TIMEOUT=
+
 # ===============
 # ==== Slack ====
 # ===============
