update logs and comments

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,8 @@ REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
 
-# ms to wait before submitting another takeAuction tx for an LT if one is still pending
+# When a `takeAuction` transaction is submitted for an LT, a mutex is locked and released after confirmation. If confirmation
+# takes longer than `TAKE_AUCTION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
 TAKE_AUCTION_LOCK_TIMEOUT=
 
 # ===============
