add changes for preliq rebalance as well

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,10 @@ PRE_LIQUIDATION_STEP_COUNT=
 # takes longer than `TAKE_AUCTION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
 TAKE_AUCTION_LOCK_TIMEOUT=
 
+# When a `preLiquidationRebalance` transaction is submitted for an LT, a mutex is locked and released after confirmation. If confirmation
+# takes longer than `PRE_LIQUIDATION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
+PRE_LIQUIDATION_LOCK_TIMEOUT=
+
 # ===============
 # ==== Slack ====
 # ===============
