add env for scaling

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,11 @@ TAKE_AUCTION_LOCK_TIMEOUT=
 # takes longer than `PRE_LIQUIDATION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
 PRE_LIQUIDATION_LOCK_TIMEOUT=
 
+# Percentage to scale `maxTakeAmount` to, to avoid reverts between off-chain calculation and on-chain execution due to continuous
+# borrow interest accrual. Represented as an integer with 4 decimal precision (1e4).
+# e.g. 9999 means `maxTakeAmount` is set to 99.99% of the calculated amount, 5000 means 50%
+MAX_TAKE_AMOUNT_SCALING=
+
 # ===============
 # ==== Slack ====
 # ===============
