rm lock and only allow one interval per LT at a time

--- a/.env.example
+++ b/.env.example
@@ -31,13 +31,13 @@ REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
 
-# When a `takeAuction` transaction is submitted for an LT, a mutex is locked and released after confirmation. If confirmation
-# takes longer than `TAKE_AUCTION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
-TAKE_AUCTION_LOCK_TIMEOUT=
+# When a `takeAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
+# takes longer than `TAKE_AUCTION_TIMEOUT`, execution continues to allow for other rebalance attempts.
+TAKE_AUCTION_TIMEOUT=
 
-# When a `preLiquidationRebalance` transaction is submitted for an LT, a mutex is locked and released after confirmation. If confirmation
-# takes longer than `PRE_LIQUIDATION_LOCK_TIMEOUT`, the lock is also automatically released to allow other rebalance attempts.
-PRE_LIQUIDATION_LOCK_TIMEOUT=
+# When a `preLiquidationRebalance` transaction is submitted for an LT, we wait for its confirmation. before further attempts. If confirmation
+# takes longer than `PRE_LIQUIDATION_TIMEOUT`, execution continues to allow other rebalance attempts.
+PRE_LIQUIDATION_TIMEOUT=
 
 # Percentage to scale `maxTakeAmount` to, to avoid reverts between off-chain calculation and on-chain execution due to continuous
 # borrow interest accrual. Represented as an integer with 4 decimal precision (1e4).
