use lease mutex on intervals

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,11 @@ DUTCH_AUCTION_POLLING_INTERVAL=
 PRE_LIQUIDATION_POLLING_INTERVAL=
 REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
+# Timeout for locks held by dutch auction intervals
+DUTCH_AUCTION_INTERVAL_LOCK_TIMEOUT=
+# Timeout for locks held by preliquidation intervals
+PRE_LIQUIDATION_INTERVAL_LOCK_TIMEOUT=
+
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
 
