fix: scale maxTakeAmount down, simulate before writes, and add locks with timeouts to avoid tx reverts (#86)

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,26 @@ DUTCH_AUCTION_POLLING_INTERVAL=
 PRE_LIQUIDATION_POLLING_INTERVAL=
 REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
+# Timeout for locks held by dutch auction intervals
+DUTCH_AUCTION_INTERVAL_LOCK_TIMEOUT=
+# Timeout for locks held by preliquidation intervals
+PRE_LIQUIDATION_INTERVAL_LOCK_TIMEOUT=
+
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
+
+# When a `takeAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
+# takes longer than `TAKE_AUCTION_TIMEOUT`, execution continues to allow for other rebalance attempts.
+TAKE_AUCTION_TIMEOUT=
+
+# When a `preLiquidationRebalance` transaction is submitted for an LT, we wait for its confirmation. before further attempts. If confirmation
+# takes longer than `PRE_LIQUIDATION_TIMEOUT`, execution continues to allow other rebalance attempts.
+PRE_LIQUIDATION_TIMEOUT=
+
+# Percentage to scale `maxTakeAmount` to, to avoid reverts between off-chain calculation and on-chain execution due to continuous
+# borrow interest accrual. Represented as an integer with 4 decimal precision (1e4).
+# e.g. 9999 means `maxTakeAmount` is set to 99.99% of the calculated amount, 5000 means 50%
+MAX_TAKE_AMOUNT_SCALING=
 
 # ===============
 # ==== Slack ====
