add name env var

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,9 @@ MAX_TAKE_AMOUNT_SCALING=
 SLACK_ALERT_CHANNEL_ID=
 SLACK_AUTH_TOKEN=
 
+# Descriptive name for this bot, for logging purposes
+SLACK_REBALANCE_BOT_NAME=
+
 # ==============
 # ==== LiFi ====
 # ==============
