feat: add lock and timeout for creating auctions

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ DUTCH_AUCTION_POLLING_INTERVAL=
 PRE_LIQUIDATION_POLLING_INTERVAL=
 REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
+# Timeout for locks held by monitor dutch auction rebalance eligibility intervals
+CREATE_AUCTION_LOCK_TIMEOUT=
 # Timeout for locks held by dutch auction intervals
 DUTCH_AUCTION_INTERVAL_LOCK_TIMEOUT=
 # Timeout for locks held by preliquidation intervals
@@ -35,6 +37,10 @@ PRE_LIQUIDATION_INTERVAL_LOCK_TIMEOUT=
 
 DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
+
+# When a `createAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
+# takes longer than `CREATE_AUCTION_TIMEOUT`, execution continues to allow for other rebalance attempts.
+CREATE_AUCTION_TIMEOUT=
 
 # When a `takeAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
 # takes longer than `TAKE_AUCTION_TIMEOUT`, execution continues to allow for other rebalance attempts.
