--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ DUTCH_AUCTION_STEP_COUNT=
 PRE_LIQUIDATION_STEP_COUNT=
 
 # When a `createAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
-# takes longer than `CREATE_AUCTION_TIMEOUT`, execution continues to allow for other rebalance attempts.
+# takes longer than `CREATE_AUCTION_TIMEOUT`, execution continues to allow for other create auction attempts.
 CREATE_AUCTION_TIMEOUT=
 
 # When a `takeAuction` transaction is submitted for an LT, we wait for its confirmation before further attempts. If confirmation
