feat: pino for logging

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Set to production to run in production mode
+NODE_ENV=
+
 CHAIN_ID=
 PRIVATE_KEY=
 PRIMARY_RPC_URL=
@@ -26,6 +29,7 @@ PRE_LIQUIDATION_REBALANCER_ADDRESS=
 DUTCH_AUCTION_POLLING_INTERVAL=
 # Polling interval for attempting to participate in a Preliquidation rebalance
 PRE_LIQUIDATION_POLLING_INTERVAL=
+# Polling interval for checking rebalance eligibility of LeverageTokens
 REBALANCE_ELIGIBILITY_POLL_INTERVAL=
 
 # Timeout for locks held by monitor dutch auction rebalance eligibility intervals
