--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "type-check": "tsc --noEmit",
-    "dev:backfill:leverage-tokens": "tsx src/backfill/backfillLeverageTokenCreated.ts",
-    "backfill:leverage-tokens": "node dist/backfill/backfillLeverageTokenCreated.js",
     "copy:leverage-tokens": "mkdir -p dist/src/data && [ -f src/data/leverageTokens.json ] && cp src/data/leverageTokens.json dist/src/data/ || true"
   },
   "devDependencies": {
@@ -31,6 +29,7 @@
     "eslint-import-resolver-typescript": "^4.3.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsx": "^4.19.3",
@@ -42,6 +41,7 @@
     "@uniswap/smart-order-router": "^4.20.10",
     "dotenv": "^16.4.7",
     "ethers": "^5.8.0",
+    "pino": "^10.1.0",
     "viem": "^2.25.0",
     "ws": "^8.18.1"
   }
