feat: use toAmountMin from lifi

--- a/.env.example
+++ b/.env.example
@@ -75,5 +75,7 @@ SLACK_REBALANCE_BOT_NAME=
 
 LIFI_API_KEY=
 
-# Slippage parameter used for LiFi API quote
+# Slippage parameter used for LiFi API quote.
+# Note that the `toAmountMin` in the response from LiFi is used for determining profitability.
+# Thus, the rebalance bot will wait longer to rebalance the strategy as this value grows.
 LIFI_SLIPPAGE=
