--- a/.env.example
+++ b/.env.example
@@ -77,5 +77,5 @@ LIFI_API_KEY=
 
 # Slippage parameter used for LiFi API quote.
 # Note that the `toAmountMin` in the response from LiFi is used for determining profitability.
-# Thus, the rebalance bot will wait longer to rebalance the strategy as this value grows.
+# Thus, the rebalance bot will wait longer to rebalance LeverageTokens as this value grows.
 LIFI_SLIPPAGE=
