feat: add balmy sdk

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ PRIMARY_RPC_URL_WS=
 FALLBACK_RPC_URL=
 ETHEREUM_MAINNET_RPC_URL=
 ETHEREUM_MAINNET_FALLBACK_RPC_URL=
+ALCHEMY_API_KEY=
 
 # Comma separated list of leverage tokens to add to backfill
 BACKFILL_LEVERAGE_TOKENS=
