fix: balmy slippage env

--- a/.env.example
+++ b/.env.example
@@ -71,10 +71,8 @@ SLACK_AUTH_TOKEN=
 SLACK_REBALANCE_BOT_NAME=
 
 # ==============
-# ==== LiFi ====
+# ==== Balmy ====
 # ==============
 
+BALMY_SLIPPAGE_PERCENTAGE=
 LIFI_API_KEY=
-
-# Slippage parameter used for LiFi API quote
-LIFI_SLIPPAGE=
