feat: add balmy sdk (#99)

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ PRIMARY_RPC_URL_WS=
 FALLBACK_RPC_URL=
 ETHEREUM_MAINNET_RPC_URL=
 ETHEREUM_MAINNET_FALLBACK_RPC_URL=
+ALCHEMY_API_KEY=
 
 # Comma separated list of leverage tokens to add to backfill
 BACKFILL_LEVERAGE_TOKENS=
@@ -70,10 +71,8 @@ SLACK_AUTH_TOKEN=
 SLACK_REBALANCE_BOT_NAME=
 
 # ==============
-# ==== LiFi ====
+# ==== Balmy ====
 # ==============
 
+BALMY_SLIPPAGE_PERCENTAGE=
 LIFI_API_KEY=
-
-# Slippage parameter used for LiFi API quote
-LIFI_SLIPPAGE=
