add min amount out to dex params output

--- a/.env.example
+++ b/.env.example
@@ -70,9 +70,15 @@ SLACK_AUTH_TOKEN=
 # Descriptive name for this bot, for logging purposes
 SLACK_REBALANCE_BOT_NAME=
 
-# ==============
+# ===============
 # ==== Balmy ====
-# ==============
+# ===============
 
 BALMY_SLIPPAGE_PERCENTAGE=
 LIFI_API_KEY=
+
+# =============
+# ==== DEX ====
+# =============
+
+DEX_SLIPPAGE_BPS=
