feat: support custom lifi link with balmy

--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,9 @@ SLACK_REBALANCE_BOT_NAME=
 # ===============
 
 BALMY_SLIPPAGE_PERCENTAGE=
+
+# Custom api url. Leave blank/undefined to use the default
+LIFI_API_URL=
 LIFI_API_KEY=
 
 # =============
